googlesql/analyzer/testdata/create_aggregate_function.test
[default language_features=NONE]
create aggregate function agg();
--
ERROR: Aggregate functions are not supported [at 1:1]
create aggregate function agg();
^
==

[default language_features=NONE,+CREATE_AGGREGATE_FUNCTION,+TEMPLATE_FUNCTIONS]

create aggregate function agg() returns int64;
--
ERROR: Function must specify LANGUAGE or have a SQL body in parentheses [at 1:1]
create aggregate function agg() returns int64;
^
==

create aggregate function agg(x string) returns bytes;
--
ERROR: Function must specify LANGUAGE or have a SQL body in parentheses [at 1:1]
create aggregate function agg(x string) returns bytes;
^
==

create aggregate function agg(x string) returns bytes
as """body"""
--
ERROR: Function must specify LANGUAGE or have a SQL body in parentheses [at 1:1]
create aggregate function agg(x string) returns bytes
^
==

create aggregate function agg(x string) returns bytes
language java
as """test program""";
--
CreateFunctionStmt(name_path=agg, has_explicit_return_type=TRUE, return_type=BYTES, argument_name_list=[x], signature=(STRING x) -> BYTES, is_aggregate=TRUE, language="java", code="test program")
==

create temp aggregate function if not exists
    agg(x string, y int32 not aggregate)
returns bytes
language something;
--
CreateFunctionStmt(name_path=agg, create_scope=CREATE_TEMP, create_mode=CREATE_IF_NOT_EXISTS, has_explicit_return_type=TRUE, return_type=BYTES, argument_name_list=[x, y], signature=(STRING x, INT32 {is_not_aggregate: true} y) -> BYTES, is_aggregate=TRUE, language="something")
==

[language_features=NONE,+CREATE_AGGREGATE_FUNCTION,+TEMPLATE_FUNCTIONS]
[statement_context={{|default|module}}]
create {{public|private}} aggregate function agg(x string) returns bytes
language java
as """test program""";
--
ALTERNATION GROUPS:
    public
    default,public
--
ERROR: CREATE FUNCTION with PUBLIC or PRIVATE modifiers is not supported [at 1:1]
create public aggregate function agg(x string) returns bytes
^
--
ALTERNATION GROUPS:
    private
    default,private
--
ERROR: CREATE FUNCTION with PUBLIC or PRIVATE modifiers is not supported [at 1:1]
create private aggregate function agg(x string) returns bytes
^
--
ALTERNATION GROUP: module,public
--
CreateFunctionStmt(name_path=agg, create_scope=CREATE_PUBLIC, has_explicit_return_type=TRUE, return_type=BYTES, argument_name_list=[x], signature=(STRING x) -> BYTES, is_aggregate=TRUE, language="java", code="test program")
--
ALTERNATION GROUP: module,private
--
CreateFunctionStmt(name_path=agg, create_scope=CREATE_PRIVATE, has_explicit_return_type=TRUE, return_type=BYTES, argument_name_list=[x], signature=(STRING x) -> BYTES, is_aggregate=TRUE, language="java", code="test program")
==

create function agg(x string, y int32 not aggregate)
returns bytes
language something;
--
ERROR: Parameters can only be marked NOT AGGREGATE in functions created with CREATE AGGREGATE FUNCTION [at 1:31]
create function agg(x string, y int32 not aggregate)
                              ^
==

# Function with options.
create aggregate function mypackage.myfunc ( ) as (SUM(42))
options ( a=b, bruce=lee );
--
CreateFunctionStmt
+-name_path=mypackage.myfunc
+-return_type=INT64
+-signature=() -> INT64
+-is_aggregate=TRUE
+-language="SQL"
+-code="SUM(42)"
+-aggregate_expression_list=
| +-$agg1#1 :=
|   +-AggregateFunctionCall(GoogleSQL:sum(INT64) -> INT64)
|     +-Literal(type=INT64, value=42)
+-function_expression=
| +-ColumnRef(type=INT64, column=$aggregate.$agg1#1)
+-option_list=
  +-a := Literal(type=STRING, value="b")
  +-bruce := Literal(type=STRING, value="lee")
==

# Query parameter in options.
# Note that query parameters are generally allowed in top level function
# declarations like this, but query parameters are not allowed in modules.
#
create aggregate function SumFunc(x int64, y int64) as (SUM(x+y))
options(param1=CONCAT(@test_param_string,'_param'));
--
CreateFunctionStmt
+-name_path=SumFunc
+-return_type=INT64
+-argument_name_list=[x, y]
+-signature=(INT64 x, INT64 y) -> INT64
+-is_aggregate=TRUE
+-language="SQL"
+-code="SUM(x+y)"
+-aggregate_expression_list=
| +-$agg1#1 :=
|   +-AggregateFunctionCall(GoogleSQL:sum(INT64) -> INT64)
|     +-FunctionCall(GoogleSQL:$add(INT64, INT64) -> INT64)
|       +-ArgumentRef(parse_location=60-61, type=INT64, name="x", argument_kind=AGGREGATE)
|       +-ArgumentRef(parse_location=62-63, type=INT64, name="y", argument_kind=AGGREGATE)
+-function_expression=
| +-ColumnRef(type=INT64, column=$aggregate.$agg1#1)
+-option_list=
  +-param1 :=
    +-FunctionCall(GoogleSQL:concat(STRING, repeated(1) STRING) -> STRING)
      +-Parameter(type=STRING, name="test_param_string")
      +-Literal(type=STRING, value="_param")
==

# Templated types are not allowed in the RETURNS clause.
create aggregate function fn() returns any type as (1);
--
ERROR: Syntax error: Templated types are not allowed in the RETURNS clause [at 1:40]
create aggregate function fn() returns any type as (1);
                                       ^
==

create aggregate function fn() returns any proto as (1);
--
ERROR: Syntax error: Templated types are not allowed in the RETURNS clause [at 1:40]
create aggregate function fn() returns any proto as (1);
                                       ^
==

create aggregate function fn() returns any enum as (1);
--
ERROR: Syntax error: Templated types are not allowed in the RETURNS clause [at 1:40]
create aggregate function fn() returns any enum as (1);
                                       ^
==

create aggregate function fn() returns any struct as (1);
--
ERROR: Syntax error: Templated types are not allowed in the RETURNS clause [at 1:40]
create aggregate function fn() returns any struct as (1);
                                       ^
==

create aggregate function fn() returns any array as (1);
--
ERROR: Syntax error: Templated types are not allowed in the RETURNS clause [at 1:40]
create aggregate function fn() returns any array as (1);
                                       ^
==

create aggregate function fn() returns any table as (1);
--
ERROR: Syntax error: Templated types are not allowed in the RETURNS clause [at 1:40]
create aggregate function fn() returns any table as (1);
                                       ^
==

create aggregate function fn(any type t) returns t as (1);
--
ERROR: Syntax error: Expected ")" but got identifier "t" [at 1:39]
create aggregate function fn(any type t) returns t as (1);
                                      ^
==

# Function swith SQL security.
create {{PUBLIC|PRIVATE|TEMP|}} aggregate function mypackage.myfunc ( )
sql security {{INVOKER|DEFINER}} as (SUM(42))
--
ALTERNATION GROUPS:
    PUBLIC,INVOKER
    PUBLIC,DEFINER
--
ERROR: CREATE FUNCTION with PUBLIC or PRIVATE modifiers is not supported [at 1:1]
create PUBLIC aggregate function mypackage.myfunc ( )
^
--
ALTERNATION GROUPS:
    PRIVATE,INVOKER
    PRIVATE,DEFINER
--
ERROR: CREATE FUNCTION with PUBLIC or PRIVATE modifiers is not supported [at 1:1]
create PRIVATE aggregate function mypackage.myfunc ( )
^
--
ALTERNATION GROUPS:
    TEMP,INVOKER
    TEMP,DEFINER
--
ERROR: SQL SECURITY clause is not supported on statements with the TEMP modifier. [at 1:1]
create TEMP aggregate function mypackage.myfunc ( )
^
--
ALTERNATION GROUP: INVOKER
--
CreateFunctionStmt
+-name_path=mypackage.myfunc
+-return_type=INT64
+-signature=() -> INT64
+-is_aggregate=TRUE
+-language="SQL"
+-code="SUM(42)"
+-aggregate_expression_list=
| +-$agg1#1 :=
|   +-AggregateFunctionCall(GoogleSQL:sum(INT64) -> INT64)
|     +-Literal(type=INT64, value=42)
+-function_expression=
| +-ColumnRef(type=INT64, column=$aggregate.$agg1#1)
+-sql_security=SQL_SECURITY_INVOKER
--
ALTERNATION GROUP: DEFINER
--
CreateFunctionStmt
+-name_path=mypackage.myfunc
+-return_type=INT64
+-signature=() -> INT64
+-is_aggregate=TRUE
+-language="SQL"
+-code="SUM(42)"
+-aggregate_expression_list=
| +-$agg1#1 :=
|   +-AggregateFunctionCall(GoogleSQL:sum(INT64) -> INT64)
|     +-Literal(type=INT64, value=42)
+-function_expression=
| +-ColumnRef(type=INT64, column=$aggregate.$agg1#1)
+-sql_security=SQL_SECURITY_DEFINER
==

# UDA with ARRAY and SQL body
[language_features=MAXIMUM,+TYPE_MODIFIERS_IN_EXPLICIT_CONSTRUCTORS_AND_UDF,+PARAMETERIZED_TYPES,+CREATE_AGGREGATE_FUNCTION]
[no_java]
create aggregate function uda_array_numeric(a ARRAY<numeric(10,2)>) as (SUM(a[OFFSET(0)]));
--
CreateFunctionStmt
+-name_path=uda_array_numeric
+-return_type=NUMERIC
+-argument_name_list=[a]
+-signature=(ARRAY<NUMERIC> type_parameters:[(precision=10,scale=2)] a) -> NUMERIC
+-is_aggregate=TRUE
+-language="SQL"
+-code="SUM(a[OFFSET(0)])"
+-aggregate_expression_list=
| +-$agg1#1 :=
|   +-AggregateFunctionCall(GoogleSQL:sum(NUMERIC) -> NUMERIC)
|     +-FunctionCall(GoogleSQL:$array_at_offset(ARRAY<NUMERIC>, INT64) -> NUMERIC)
|       +-ArgumentRef(parse_location=76-77, type=ARRAY<NUMERIC>, name="a", argument_kind=AGGREGATE)
|       +-Literal(type=INT64, value=0)
+-function_expression=
  +-ColumnRef(type=NUMERIC, column=$aggregate.$agg1#1)
==

# UDA with STRUCT and SQL body
[language_features=MAXIMUM,+TYPE_MODIFIERS_IN_EXPLICIT_CONSTRUCTORS_AND_UDF,+PARAMETERIZED_TYPES,+CREATE_AGGREGATE_FUNCTION]
[no_java]
create aggregate function uda_struct(s STRUCT<x string(10), y timestamp(12)>) as (ARRAY_AGG(s));
--
CreateFunctionStmt
+-name_path=uda_struct
+-return_type=ARRAY<STRUCT<x STRING, y TIMESTAMP>>
+-argument_name_list=[s]
+-signature=(STRUCT<x STRING, y TIMESTAMP> type_parameters:[(max_length=10),(precision=12)] s) -> ARRAY<STRUCT<x STRING, y TIMESTAMP>>
+-is_aggregate=TRUE
+-language="SQL"
+-code="ARRAY_AGG(s)"
+-aggregate_expression_list=
| +-$agg1#1 :=
|   +-AggregateFunctionCall(GoogleSQL:array_agg(STRUCT<x STRING, y TIMESTAMP>) -> ARRAY<STRUCT<x STRING, y TIMESTAMP>>)
|     +-ArgumentRef(parse_location=92-93, type=STRUCT<x STRING, y TIMESTAMP>, name="s", argument_kind=AGGREGATE)
+-function_expression=
  +-ColumnRef(type=ARRAY<STRUCT<x STRING, y TIMESTAMP>>, column=$aggregate.$agg1#1)
==

# UDA with MAP and non-SQL language
[language_features=MAXIMUM,+TYPE_MODIFIERS_IN_EXPLICIT_CONSTRUCTORS_AND_UDF,+PARAMETERIZED_TYPES,+CREATE_AGGREGATE_FUNCTION,+MAP_TYPE]
[no_java]
create aggregate function uda_map(m MAP<timestamp(12), numeric(10, 2)>) returns numeric(10, 2) language js as """ body """;
--
ERROR: Type modifiers are not supported on the return type of non-SQL user-defined functions [at 1:81]
...m MAP<timestamp(12), numeric(10, 2)>) returns numeric(10, 2) language js a...
                                                 ^
==

# UDA with RANGE and non-SQL language
[language_features=MAXIMUM,+TYPE_MODIFIERS_IN_EXPLICIT_CONSTRUCTORS_AND_UDF,+PARAMETERIZED_TYPES,+CREATE_AGGREGATE_FUNCTION,+RANGE_TYPE]
[no_java]
create aggregate function uda_range(r RANGE<TIMESTAMP(12)>) returns RANGE<TIMESTAMP(12)> language python as """ body """;
--
ERROR: Type modifiers are not supported on the return type of non-SQL user-defined functions [at 1:69]
...function uda_range(r RANGE<TIMESTAMP(12)>) returns RANGE<TIMESTAMP(12)> la...
                                                      ^
==

[language_features=MAXIMUM,+TYPE_MODIFIERS_IN_EXPLICIT_CONSTRUCTORS_AND_UDF,+PARAMETERIZED_TYPES,+CREATE_AGGREGATE_FUNCTION,+MAP_TYPE]
[no_java]
create aggregate function uda_map(m MAP<timestamp(12), numeric(10, 2)>) returns numeric language js as """ body """;
--
CreateFunctionStmt(name_path=uda_map, has_explicit_return_type=TRUE, return_type=NUMERIC, argument_name_list=[m], signature=(MAP<TIMESTAMP, NUMERIC> type_parameters:[(precision=12),(precision=10,scale=2)] m) -> NUMERIC, is_aggregate=TRUE, language="js", code=" body ")
==

# UDA with ARRAY of STRUCT
[language_features=MAXIMUM,+TYPE_MODIFIERS_IN_EXPLICIT_CONSTRUCTORS_AND_UDF,+PARAMETERIZED_TYPES,+CREATE_AGGREGATE_FUNCTION]
[no_java]
create aggregate function uda_array_struct(a ARRAY<STRUCT<x numeric(10,2)>>) as (SUM(a[OFFSET(0)].x));
--
CreateFunctionStmt
+-name_path=uda_array_struct
+-return_type=NUMERIC
+-argument_name_list=[a]
+-signature=(ARRAY<STRUCT<x NUMERIC>> type_parameters:[[(precision=10,scale=2)]] a) -> NUMERIC
+-is_aggregate=TRUE
+-language="SQL"
+-code="SUM(a[OFFSET(0)].x)"
+-aggregate_expression_list=
| +-$agg1#1 :=
|   +-AggregateFunctionCall(GoogleSQL:sum(NUMERIC) -> NUMERIC)
|     +-GetStructField
|       +-type=NUMERIC
|       +-expr=
|       | +-FunctionCall(GoogleSQL:$array_at_offset(ARRAY<STRUCT<x NUMERIC>>, INT64) -> STRUCT<x NUMERIC>)
|       |   +-ArgumentRef(parse_location=85-86, type=ARRAY<STRUCT<x NUMERIC>>, name="a", argument_kind=AGGREGATE)
|       |   +-Literal(type=INT64, value=0)
|       +-field_idx=0
+-function_expression=
  +-ColumnRef(type=NUMERIC, column=$aggregate.$agg1#1)
==

# UDA with STRUCT of ARRAY
[language_features=MAXIMUM,+TYPE_MODIFIERS_IN_EXPLICIT_CONSTRUCTORS_AND_UDF,+PARAMETERIZED_TYPES,+CREATE_AGGREGATE_FUNCTION]
[no_java]
create aggregate function uda_struct_array(s STRUCT<a ARRAY<numeric(10,2)>>) as (SUM(s.a[OFFSET(0)]));
--
CreateFunctionStmt
+-name_path=uda_struct_array
+-return_type=NUMERIC
+-argument_name_list=[s]
+-signature=(STRUCT<a ARRAY<NUMERIC>> type_parameters:[[(precision=10,scale=2)]] s) -> NUMERIC
+-is_aggregate=TRUE
+-language="SQL"
+-code="SUM(s.a[OFFSET(0)])"
+-aggregate_expression_list=
| +-$agg1#1 :=
|   +-AggregateFunctionCall(GoogleSQL:sum(NUMERIC) -> NUMERIC)
|     +-FunctionCall(GoogleSQL:$array_at_offset(ARRAY<NUMERIC>, INT64) -> NUMERIC)
|       +-GetStructField
|       | +-type=ARRAY<NUMERIC>
|       | +-expr=
|       | | +-ArgumentRef(parse_location=85-86, type=STRUCT<a ARRAY<NUMERIC>>, name="s", argument_kind=AGGREGATE)
|       | +-field_idx=0
|       +-Literal(type=INT64, value=0)
+-function_expression=
  +-ColumnRef(type=NUMERIC, column=$aggregate.$agg1#1)
==

# UDA with templated argument and return type modifier (SQL)
[language_features=MAXIMUM,+TYPE_MODIFIERS_IN_EXPLICIT_CONSTRUCTORS_AND_UDF,+PARAMETERIZED_TYPES,+CREATE_AGGREGATE_FUNCTION]
[no_java]
create aggregate function templated_uda_numeric(x any type) returns numeric(10, 2) as (SUM(CAST(x AS numeric(10, 2))));
--
CreateFunctionStmt(name_path=templated_uda_numeric, has_explicit_return_type=TRUE, return_type=NUMERIC, argument_name_list=[x], signature=(ANY TYPE x) -> NUMERIC type_parameters:(precision=10,scale=2), is_aggregate=TRUE, language="SQL", code="SUM(CAST(x AS numeric(10, 2)))")
==

# UDA with templated argument and return type modifier of STRUCT
[prepare_database=db1]
[language_features=MAXIMUM,+TYPE_MODIFIERS_IN_EXPLICIT_CONSTRUCTORS_AND_UDF,+PARAMETERIZED_TYPES,+CREATE_AGGREGATE_FUNCTION,+COLLATION_SUPPORT]
[no_java]
create aggregate function templated_uda_struct(x any type) returns STRUCT<a STRING COLLATE 'und:ci', b NUMERIC(5, 2)> as (STRUCT(MAX(CAST(x AS STRING)), SUM(CAST(x AS NUMERIC))));
--
CreateFunctionStmt(name_path=templated_uda_struct, has_explicit_return_type=TRUE, return_type=STRUCT<a STRING, b NUMERIC>, argument_name_list=[x], signature=(ANY TYPE x) -> STRUCT<a STRING, b NUMERIC> type_parameters:[null,(precision=5,scale=2)], collation:[und:ci,_], is_aggregate=TRUE, language="SQL", code="STRUCT(MAX(CAST(x AS STRING)), SUM(CAST(x AS NUMERIC)))")
==

# UDA with templated argument and return type modifier (non-SQL)
[language_features=MAXIMUM,+TYPE_MODIFIERS_IN_EXPLICIT_CONSTRUCTORS_AND_UDF,+PARAMETERIZED_TYPES,+CREATE_AGGREGATE_FUNCTION]
[no_java]
create aggregate function templated_uda_numeric_js(x any type) returns numeric(10, 2) language js as "return 1;";
--
ERROR: Type modifiers are not supported on the return type of non-SQL user-defined functions [at 1:72]
...templated_uda_numeric_js(x any type) returns numeric(10, 2) language js as...
                                                ^
